81: update documentation template

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,4 @@
+  #81 update documentation template
 
 v0.5 Documentation and Building
   #64 fixed eleminate boost dependency with add external project
